# telegram-shop-bot

./: .example.env  .gitignore  pyproject.toml
shop_bot/: __main__.py
shop_bot/db/: __init__.py
shop_bot/db/postgres/: resource.py
shop_bot/filters/: __init__.py  correct_name.py  correct_url.py  is_admin.py
shop_bot/handlers/: __init__.py  commands.py
shop_bot/handlers/admin/: admin_panel.py
shop_bot/handlers/user/: base.py  shop.py
shop_bot/keyboards/: __init__.py
shop_bot/keyboards/default/: main_menu.py  user_kb.py
shop_bot/keyboards/inline/: admin_kb.py  user_kb.py
shop_bot/locales/: __init__.py
shop_bot/locales/answers/: answers_ru.py
shop_bot/locales/commands/: commands_ru.py
shop_bot/middlewares/: __init__.py  db_middleware.py
shop_bot/models/: __init__.py
shop_bot/models/db/: base.py  category.py  item.py
shop_bot/repository/: category.py  item.py
shop_bot/states/: __init__.py  admin_state.py  user_state.py
shop_bot/utils/: __init__.py  config.py  logging.py
